Fixes some bugs found by findbugs and disables findbugs.